# photoOrganizer

./: .gitignore  LICENSE  README.md  setup.cfg
src/photoorganizer/: identify.py  organize.py
src/photoorganizer/dateorganizer/: DateOrganizer.py
src/photoorganizer/organizers/: DateOrganizer.py  FaceOrganizer.py  LocationOrganizer.py
src/photoorganizer/pictureloader/: Metadata.py  Picture.py
src/photoorganizer/pictureoutput/: DefaultOutput.py
src/photoorganizer/util/: Coord.py
