[metadata]
name = photo_organizer
author = Chris Bates
author_email = admin@christopherjbates.uk
version = 0.0.1
description = Organizes photos based on metadata and properties
long_description = file: README.md, LICENSE
keywords = photo, imageprocessing
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    typing
    Pillow==6.2.1

[options.package_data]
* = *.txt, *.md, LICENSE

[options.extras_require]

[options.packages.find]
where=src